[package]
version = "0.3.0"
edition = "2018"
name = "scaffold"
description = "Quickly add dependencies to your Rust project."
homepage = "https://github.com/segfaultsourcery/scaffold"
license = "MIT"
categories = ["command-line-utilities", "config", "development-tools", "text-editors"]
authors = ["Kim Hermansson <h4xrk1m@gmail.com>"]
documentation = "https://github.com/segfaultsourcery/scaffold"
keywords = ["toml", "cargo", "scaffold", "productivity"]
readme = "README.md"

[dependencies]
quest = "^0.3"
serde_derive = "^1.0"
shellexpand = "^1.0"
structopt = "^0.3"

[dependencies.indexmap]
features = ["serde-1"]
version = "^1.3"

[dependencies.serde]
features = ["derive"]
version = "^1.0"

[dependencies.toml]
features = ["preserve_order"]
version = "^0.5"
