[package]
version = "0.3.1"
license = "MIT"
documentation = "https://github.com/segfaultsourcery/scaffold"
readme = "README.md"
edition = "2018"
authors = ["Kim Hermansson <h4xrk1m@gmail.com>"]
name = "scaffold"
categories = ["command-line-utilities", "config", "development-tools", "text-editors"]
description = "Quickly add dependencies to your Rust project."
keywords = ["toml", "cargo", "scaffold", "productivity"]
homepage = "https://github.com/segfaultsourcery/scaffold"

[dependencies]
quest = "^0.3"
serde_derive = "^1.0"
shellexpand = "^1.0"
structopt = "^0.3"

[dependencies.indexmap]
features = ["serde-1"]
version = "^1.3"

[dependencies.serde]
features = ["derive"]
version = "^1.0"

[dependencies.toml]
features = ["preserve_order"]
version = "^0.5"
